--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "publisher": "TemporaryValues",
   "license": "LICENSE",
   "engines": {
-    "vscode": "^1.66.0"
+    "vscode": "^1.69.0"
   },
   "categories": [
     "Other"
@@ -38,7 +38,7 @@
         "title": "MarkDown: Paste Url"
       }
     ],
-    "keybindings":[
+    "keybindings": [
       {
         "command": "extension.pasteUrl",
         "key": "ctrl+v",
@@ -85,22 +85,22 @@
   },
   "devDependencies": {
     "@types/glob": "^7.2.0",
-    "@types/mocha": "^9.1.0",
-    "@types/node": "14.x",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^14.18.23",
     "@types/uuid": "^8.3.4",
-    "@types/vscode": "^1.66.0",
-    "@typescript-eslint/eslint-plugin": "^5.16.0",
-    "@typescript-eslint/parser": "^5.16.0",
-    "@vscode/test-electron": "^2.1.3",
+    "@types/vscode": "^1.69.0",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
+    "@vscode/test-electron": "^2.1.5",
     "chevrotain": "^10.1.2",
-    "eslint": "^8.11.0",
+    "eslint": "^8.21.0",
     "exif-be-gone-ts": "^0.0.8",
-    "glob": "^7.2.0",
+    "glob": "^7.2.3",
     "mocha": "^9.2.2",
-    "ts-loader": "^9.2.8",
-    "typescript": "^4.5.5",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2"
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.7.4",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   },
   "dependencies": {
     "uuid": "^8.3.2",
